--- a/nft-preview-card/index.html
+++ b/nft-preview-card/index.html
@@ -26,7 +26,7 @@
         /></a>
       </div>
       <a href="/"><h2>Equilibrium #3429</h2></a>
-      <p>Our Equilibrium collection promotes balance and clam.</p>
+      <p>Our Equilibrium collection promotes balance and calm.</p>
       <div class="info">
         <div class="price">
           <img src="images/icon-ethereum.svg" alt="price in ethereum" />
